--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="16dp"
-    tools:context=".SignUp">
+    android:padding="16dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,6 +46,8 @@
         android:text="Sign Up"
         android:layout_marginBottom="16dp" />
 
+
+
     <TextView
         android:id="@+id/tvSignInRedirect"
         android:layout_width="wrap_content"
@@ -56,7 +55,5 @@
         android:text="Already have an account? Sign In"
         android:textColor="@android:color/holo_blue_dark"
         android:layout_gravity="center" />
-
-
 
 </LinearLayout>
